@@ -48,6 +48,7 @@ import org.elasticsearch.index.shard.IndexingStats;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.index.shard.ShardPath;
 import org.elasticsearch.index.store.StoreStats;
+import org.elasticsearch.indices.recovery.RecoveryState;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.plugins.PluginsService;
 import org.elasticsearch.telemetry.Measurement;
@@ -620,7 +621,24 @@ public class WriteLoadConstraintDeciderIT extends ESIntegTestCase {
         ).sorted(comparator).toList();
 
         // The moved shard should be at the head of the sorted list
-        assertThat(movedShardId, equalTo(bestShardsToMove.get(0).shardId().id()));
+        assertThat(movedShardId, equalTo(bestShardsToMove.getFirst().shardId().id()));
+
+        // Assert that the moved shard was recovered with priority RELOCATION_CAN_REMAIN_NOT_PREFERRED:
+        List<RecoveryState> recoveryStatesForMovedShard = admin().indices()
+            .prepareRecoveries(harness.indexName)
+            .get()
+            .shardRecoveryStates()
+            .get(harness.indexName)
+            .stream()
+            .filter(state -> state.getShardId().id() == movedShardId)
+            // We're interesting on the recovery after the move to the second or third node, not the initial creation on the first node:
+            .filter(state -> !state.getTargetNode().getId().equals(harness.firstDataNodeId))
+            .toList();
+        assertThat(recoveryStatesForMovedShard.size(), equalTo(1));
+        assertThat(
+            recoveryStatesForMovedShard.getFirst().getRecoveryPriority(),
+            equalTo(ShardRouting.RecoveryPriority.RELOCATION_CAN_REMAIN_NOT_PREFERRED)
+        );
     }
 
     public void testMaxQueueLatencyMetricIsPublished() {
@@ -927,7 +945,8 @@ public class WriteLoadConstraintDeciderIT extends ESIntegTestCase {
             true,
             RecoverySource.EmptyStoreRecoverySource.INSTANCE,
             new UnassignedInfo(UnassignedInfo.Reason.INDEX_CREATED, null),
-            ShardRouting.Role.DEFAULT
+            ShardRouting.Role.DEFAULT,
+            ShardRouting.RecoveryPriority.UNASSIGNED_NEW_PRIMARY
         );
         shardRouting = shardRouting.initialize(assignedShardNodeId, null, ShardRouting.UNAVAILABLE_EXPECTED_SHARD_SIZE);
         shardRouting = shardRouting.moveToStarted(ShardRouting.UNAVAILABLE_EXPECTED_SHARD_SIZE);
